# EpiGNTS

./: README.md  ReadMe.md  analyze.py  analyze_vax.py  config.py  gnts.py  gnts_vax.py  main.py  main_vax.py  netepi_vax.py  netgen.py  network_epidemic.py  peak_dry.py  peak_shift.py  phase_dia.py  pilot_vax.py  plot_gnts_scaling.py  plot_rest.py  pyproject.toml  simulation.py  simulation_vax.py  snap_nets.py  speed.py  strategies.py  strategies_vax.py  vaccination.py
codex/: export_networks.py  main_old.py  network_epidemic_old.py  plot_networks.R  simulation_old.py  strategies_old.py
codex/new/: config.py  (+5 more)
csvs/: LiveJournal_Beta_Binomial_14.csv  LiveJournal_GlobalGNTS_14.csv  LiveJournal_LocalGNTS_14.csv  LiveJournal_Proportional.csv  LiveJournal_Random.csv  LiveJournal_Uniform.csv  Orkut_Beta_Binomial_14.csv  Orkut_GlobalGNTS_14.csv  Orkut_LocalGNTS_14.csv  Orkut_Proportional.csv  Orkut_Random.csv  Orkut_Uniform.csv  SBM-1k_Beta_Binomial_14.csv  SBM-1k_GlobalGNTS_14.csv  SBM-1k_LocalGNTS_14.csv  SBM-1k_Peak_100_Beta_Binomial_14.csv  SBM-1k_Peak_100_GlobalGNTS_14.csv  SBM-1k_Peak_100_LocalGNTS_14.csv  SBM-1k_Peak_100_Proportional.csv  SBM-1k_Peak_100_Random.csv  SBM-1k_Peak_100_Uniform.csv  SBM-1k_Peak_25_Beta_Binomial_14.csv  SBM-1k_Peak_25_GlobalGNTS_14.csv  SBM-1k_Peak_25_LocalGNTS_14.csv  SBM-1k_Peak_25_Proportional.csv  SBM-1k_Peak_25_Random.csv  SBM-1k_Peak_25_Uniform.csv  SBM-1k_Peak_40_Beta_Binomial_14.csv  SBM-1k_Peak_40_GlobalGNTS_14.csv  SBM-1k_Peak_40_LocalGNTS_14.csv  SBM-1k_Peak_40_Proportional.csv  SBM-1k_Peak_40_Random.csv  SBM-1k_Peak_40_Uniform.csv  (+197 more)
(+241 files in other folders)
